fixing token counter

--- a/projects/llm_chat/openai_basics.ipynb
+++ b/projects/llm_chat/openai_basics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,13 +21,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "messages = [{\"role\": \"user\", \n",
-    "             \"content\": \"How many towns are there in Spain?\"\n",
-    "             }]\n",
+    "messages = [{\n",
+    "            \"role\": \"user\", \n",
+    "            \"content\": \"How many towns are there in Spain?\"\n",
+    "            }]\n",
     "\n",
     "# gpt-4\n",
     "completion = openai.ChatCompletion.create(model=\"gpt-4\", messages=messages)"
@@ -35,14 +36,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "As of 2021, Spain has approximately 8124 municipalities or towns. The number can vary slightly as municipal borders and statuses can change.\n"
+      "As of the most recent data, Spain has approximately 8,122 municipalities or towns.\n"
      ]
     }
    ],
@@ -52,36 +53,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<OpenAIObject chat.completion id=chatcmpl-7yLqTYW26Fo0jooCZDrJU2IEy5kv7 at 0x181dbfaaed0> JSON: {\n",
-       "  \"id\": \"chatcmpl-7yLqTYW26Fo0jooCZDrJU2IEy5kv7\",\n",
+       "<OpenAIObject chat.completion id=chatcmpl-7yc14lZLGZ0WHcek1ep31DOeozpna at 0x24343fec350> JSON: {\n",
+       "  \"id\": \"chatcmpl-7yc14lZLGZ0WHcek1ep31DOeozpna\",\n",
        "  \"object\": \"chat.completion\",\n",
-       "  \"created\": 1694618009,\n",
+       "  \"created\": 1694680170,\n",
        "  \"model\": \"gpt-4-0613\",\n",
        "  \"choices\": [\n",
        "    {\n",
        "      \"index\": 0,\n",
        "      \"message\": {\n",
        "        \"role\": \"assistant\",\n",
-       "        \"content\": \"As of 2021, Spain has approximately 8124 municipalities or towns. The number can vary slightly as municipal borders and statuses can change.\"\n",
+       "        \"content\": \"As of the most recent data, Spain has approximately 8,122 municipalities or towns.\"\n",
        "      },\n",
        "      \"finish_reason\": \"stop\"\n",
        "    }\n",
        "  ],\n",
        "  \"usage\": {\n",
        "    \"prompt_tokens\": 15,\n",
-       "    \"completion_tokens\": 29,\n",
-       "    \"total_tokens\": 44\n",
+       "    \"completion_tokens\": 18,\n",
+       "    \"total_tokens\": 33\n",
        "  }\n",
        "}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,6 +158,43 @@
    "source": [
     "num_tokens = len(encoding)\n",
     "num_tokens"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13 9 userHow many towns are there in Spain?\n",
+      "36 19 assistantAs of the most recent data, Spain has approximately 8,122 municipalities or towns.\n",
+      "50 10 userHow many towns are there in Catalunya?\n",
+      "67 13 assistantCatalonia, Spain is divided into 947 municipalities.\n",
+      "80 9 userHow many towns are there in France?\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "80"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t = 0\n",
+    "for m in messages:\n",
+    "    s = m[\"role\"] + m[\"content\"] \n",
+    "    t += len(encoding.encode(s)) + 4\n",
+    "    print(t, len(encoding.encode(s)), s)\n",
+    "\n",
+    "t"
    ]
   }
  ],
